create the core::scalar namespace for things like reftype
Perl has never formally define a namespace for internal utilities
like reftype(), refaddr(), blessed(), etc.

Historically we have used namespaces like Scalar::Util, Hash::Util,
etc, however these namespaces are not uniformly owned by the core
development group, and have various undesirable usage issues.

At the Amsterdam Perl-core hackathon it was decided that the
"core" namespace will be the namespace where such utility functions
will be embedded in the language, and that furthermore we will
use "core::scalar" for things about scalars, etc.

This patch adds "core::scalar", future patches will add "core::array",
"core::hash", etc, for similar functionality. We will migrate away
the important parts of Hash::Util, and 're' to the core::hash and
core::regex namespacees, etc.

USAGE NOTE: a number of the functions that are in both core::scalar
AND in Scalar::Util have had their interfaces slightly changed to
make them more useful. Specifically reftype() and refaddr() and
blessed() have been changed to return *FALSE* (that is Pl_sv_no)
when their argument is not a ref, or not a class, and not to return
undef like Scalar::Util does. This is considered an improvement,
as generally returning undef meant these functions needed to be
guarded such that typically the internal logic would get called
twice.

--- a/pod/perlop.pod
+++ b/pod/perlop.pod
@@ -2103,7 +2103,7 @@ to be C<eval>ed before being run as a Perl expression.
 
 Examples:
 
-    s/\bgreen\b/mauve/g;	      # don't change wintergreen
+    s/\bgreen\b/core::scalar/g;	      # don't change wintergreen
 
     $path =~ s|/usr/bin|/usr/local/bin|;
 
