--- a/pod/perlfunc.pod
+++ b/pod/perlfunc.pod
@@ -829,9 +829,6 @@ therefore refers to "layers" rather than to "disciplines".  Now back to
 the regularly scheduled documentation...>
 
 To mark FILEHANDLE as UTF-8, use C<:utf8> or C<:encoding(UTF-8)>.
-C<:utf8> just marks the data as UTF-8 without further checking,
-while C<:encoding(UTF-8)> checks the data for actually being valid
-UTF-8.  More details can be found in L<PerlIO::encoding>.
 
 In general, L<C<binmode>|/binmode FILEHANDLE, LAYER> should be called
 after L<C<open>|/open FILEHANDLE,EXPR> but before any I/O is done on the
@@ -840,9 +837,7 @@ flushes any pending buffered output data (and perhaps pending input
 data) on the handle.  An exception to this is the C<:encoding> layer
 that changes the default character encoding of the handle.
 The C<:encoding> layer sometimes needs to be called in
-mid-stream, and it doesn't flush the stream.  C<:encoding>
-also implicitly pushes on top of itself the C<:utf8> layer because
-internally Perl operates on UTF8-encoded Unicode characters.
+mid-stream, and it doesn't flush the stream.
 
 The operating system, device drivers, C libraries, and Perl run-time
 system all conspire to let the programmer treat a single
@@ -8813,7 +8808,6 @@ B<WARNING>: If the filehandle is marked C<:utf8>, Unicode characters
 encoded in UTF-8 are written instead of bytes, and the LENGTH, OFFSET, and
 return value of L<C<syswrite>|/syswrite FILEHANDLE,SCALAR,LENGTH,OFFSET>
 are in (UTF8-encoded Unicode) characters.
-The C<:encoding(...)> layer implicitly introduces the C<:utf8> layer.
 Alternately, if the handle is not marked with an encoding but you
 attempt to write characters with code points over 255, raises an exception.
 See L<C<binmode>|/binmode FILEHANDLE, LAYER>,
