--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -3376,11 +3376,6 @@ One possible cause is that you set the UTF8 flag yourself for data that
 you thought to be in UTF-8 but it wasn't (it was for example legacy
 8-bit data).  To guard against this, you can use Encode::decode_utf8.
 
-If you use the C<:encoding(UTF-8)> PerlIO layer for input, invalid byte
-sequences are handled gracefully, but if you use C<:utf8>, the flag is
-set without validating the data, possibly resulting in this error
-message.
-
 See also L<Encode/"Handling Malformed Data">.
 
 =item Malformed UTF-8 character immediately after '%s'
@@ -6435,6 +6430,10 @@ available on your platform), including surrogates.  But these can cause
 problems when being input or output, which is likely where this message
 came from.  If you really really know what you are doing you can turn
 off this warning by C<no warnings 'surrogate';>.
+
+=item Unknown argument to :utf8: %s
+
+(F) The :utf8 was given an unknown argument and dies because of it.
 
 =item Unknown charname '%s'
 
