fix do dir returning no $!
do()ing a directory was returning false/empty string in $!, which isn't
an error, yet documentation says $! should have the error code in it.
Fix this by returning EISDIR for dirs, and EINVAL for block devices.
[perl #125774]

Remove "errno = 0" and comment added in b2da7ead68, since now there is no
scenario where errno is uninitialized, since the dir and block device
failure branches now set errno, where previously they didn't.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -558,6 +558,11 @@ operator.  [perl #132245]
 Fixed a leaked SV when parsing an empty C<\N{}> at compile-time.
 [perl #132245]
 
+=item *
+
+Calling C<do $path> on a directory or block device now yields a meaningful
+error code in C<$!>.  [perl #125774]
+
 =back
 
 =head1 Known Problems
