--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -372,6 +372,11 @@ longer causes crashes. [perl #128086]
 Assignment variants of any bitwise ops under the C<bitwise> feature would
 crash if the left-hand side was an array or hash.  [perl #128204]
 
+=item *
+
+socket() now leaves the error code returned by the system in C<$!> on
+failure.  [perl #128316]
+
 =back
 
 =head1 Known Problems
