perldelta for #128508 / b3dd0aba3
(cherry picked from commit b05a99b8c3fe8c592c0fcd1e83598f608f0fd709)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -381,6 +381,11 @@ failure.  [perl #128316]
 
 Parsing bad POSIX charclasses no longer leaks memory. [perl #128313]
 
+=item *
+
+Since Perl v5.20, line numbers have been off by one when perl is invoked
+with the B<-x> switch.  This has been fixed. [perl #128508]
+
 =back
 
 =head1 Known Problems
