perldelta for a2637ca0a / #128597
(cherry picked from commit 44bcb1772d5812694380d8a504e2ad98c3097cf4)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -386,6 +386,12 @@ Parsing bad POSIX charclasses no longer leaks memory. [perl #128313]
 Since Perl v5.20, line numbers have been off by one when perl is invoked
 with the B<-x> switch.  This has been fixed. [perl #128508]
 
+=item *
+
+Some obscure cases of subroutines and file handles being freed at the same
+time could result in crashes, but have been fixed.  The crash was
+introduced in v5.22. [perl #128597]
+
 =back
 
 =head1 Known Problems
