--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -6900,7 +6900,10 @@ points up to 0x10FFFF, but Perl allows much larger ones.  However, the
 largest possible ones break the perl interpreter in some constructs,
 including causing it to hang in a few cases.  The known problem areas
 are in C<tr///>, regular expression pattern matching using quantifiers,
-and as the upper limits in loops.
+as quote delimiters in C<qI<X>...I<X>> (where I<X> is the C<chr()> of a large
+code point), and as the upper limits in loops.
+There may be other breakages as well.  If you get this warning, and
+things aren't working correctly, you probably have found one of these.
 
 If your code is to run on various platforms, keep in mind that the upper
 limit depends on the platform.  It is much larger on 64-bit word sizes
