Add Sergey Aleynikov to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1102,6 +1102,7 @@ Sebastian Steinlechner		<steinlechner@gmx.net>
 Sébastien Aperghis-Tramoni	<saper@cpan.org>
 Sebastien Barre			<Sebastien.Barre@utc.fr>
 Sergey Alekseev			<varnie29a@mail.ru>
+Sergey Aleynikov		<sergey.aleynikov@gmail.com>
 Sérgio Durigan Júnior		<sergiodj@linux.vnet.ibm.com>
 Shawn				<svicalifornia@gmail.com>
 Shawn M Moore			<sartak@gmail.com>
