Add Richard Levitte to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1035,6 +1035,7 @@ Richard Hitt			<rbh00@utsglobal.com>
 Richard Kandarian		<richard.kandarian@lanl.gov>
 Richard L. England		<richard_england@mentorg.com>
 Richard L. Maus, Jr.		<rmaus@monmouth.com>
+Richard Levitte			<levitte@openssl.org>
 Richard Möhn			<richard.moehn@fu-berlin.de>
 Richard Ohnemus			<richard_ohnemus@dallas.csd.sterling.com>
 Richard Soderberg		<p5-authors@crystalflame.net>
