--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -191,11 +191,15 @@ L<Memoize> has been upgraded from version 1.03 to 1.03_01.
 
 =item *
 
-L<Module::CoreList> has been upgraded from version 5.20160506 to 5.20160730_24.
+L<Module::CoreList> has been upgraded from version 5.20160506 to 5.20160819_24.
 
 =item *
 
 L<Net::Ping> has been upgraded from version 2.43 to 2.43_01.
+
+=item *
+
+L<Parse::CPAN::Meta> has been upgraded from version 1.4417 to 1.4417_001.
 
 =item *
 
