--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -286,20 +286,20 @@ The C<PadlistNAMES> macro is an lvalue again.
 =head1 Acknowledgements
 
 Perl 5.22.3 represents approximately 3 months of development since Perl 5.22.2
-and contains approximately 3,300 lines of changes across 240 files from 16
+and contains approximately 3,400 lines of changes across 240 files from 17
 authors.
 
 Excluding auto-generated files, documentation and release tools, there were
-approximately 1,400 lines of changes to 170 .pm, .t, .c and .h files.
+approximately 1,500 lines of changes to 170 .pm, .t, .c and .h files.
 
 Perl continues to flourish into its third decade thanks to a vibrant community
 of users and developers.  The following people are known to have contributed
 the improvements that became Perl 5.22.3:
 
 Abigail, Alex Vandiver, Aristotle Pagaltzis, Craig A. Berry, David Mitchell,
-Father Chrysostomos, James E Keenan, Karen Etheridge, Karl Williamson, Matthew
-Horsfall, Niko Tyni, Ricardo Signes, Sawyer X, Stevan Little, Steve Hay, Tony
-Cook.
+Father Chrysostomos, James E Keenan, Jarkko Hietaniemi, Karen Etheridge, Karl
+Williamson, Matthew Horsfall, Niko Tyni, Ricardo Signes, Sawyer X, Stevan
+Little, Steve Hay, Tony Cook.
 
 The list above is almost certainly incomplete as it is automatically generated
 from version control history.  In particular, it does not include the names of
