perldiag: Rewrap an entry for better splain output
In an eighty-column terminal, this is what it looked like before
this commit:

$ ./perl -Ilib -Mdiagnostics -E 'state ($x)=1'
Initialization of state variables in list context currently forbidden at -e line 1, at EOF
Execution of -e aborted due to compilation errors (#1)
    (F) state only permits initializing a single scalar variable, in scalar
    context. So state $a = 42 is allowed, but not state ($a) = 42. To apply
    state semantics to a hash or array, store a hash or array reference in a sca
lar
    variable.

--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -2742,9 +2742,9 @@ either consume text or fail.
 =item Initialization of state variables in list context currently forbidden
 
 (F) C<state> only permits initializing a single scalar variable, in scalar
-context. So C<state $a = 42> is allowed, but not C<state ($a) = 42>. To apply
-state semantics to a hash or array, store a hash or array reference in a scalar
-variable.
+context.  So C<state $a = 42> is allowed, but not C<state ($a) = 42>.  To apply
+state semantics to a hash or array, store a hash or array reference in a
+scalar variable.
 
 =item %%s[%s] in scalar context better written as $%s[%s]
 
