--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -378,6 +378,12 @@ variable has not been mentioned before.  This affected code like
 C<qq|@DB::args|> and C<qq|@SIG{'CHLD', 'HUP'}|>.  (The special variables
 C<@-> and C<@+> were already exempt from the warning.)
 
+=item *
+
+C<gethostent> and similar functions now perform a null check internally, to
+avoid crashing with torsocks.  This was a regression from 5.22.  [perl
+#128740]
+
 =back
 
 =head1 Known Problems
