perldelta for #126482 / c82de78e3ba
(cherry picked from commit c61c589cfa68dccf52432ac2d8e084ba49a4da14)

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -421,6 +421,12 @@ C<gethostent> and similar functions now perform a null check internally, to
 avoid crashing with torsocks.  This was a regression from 5.22.  [perl
 #128740]
 
+=item *
+
+Mentioning the same constant twice in a row (which is a syntax error) no
+longer fails an assertion under debugging builds.  This was a regression
+from 5.20.  [perl #126482]
+
 =back
 
 =head1 Known Problems
