--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -433,6 +433,12 @@ In 5.25.4 fchown() was changed not to accept negative one as an argument
 because in some platforms that is an error.  However, in some other platforms
 that is an acceptable argument.  This change has been reverted [perl #128967].
 
+=item *
+
+C<@{x> followed by a newline where C<x> represents a control or non-ASCII
+character no longer produces a garbled syntax error message or a crash.
+[perl #128951]
+
 =back
 
 =head1 Known Problems
