--- a/pod/perl.pod
+++ b/pod/perl.pod
@@ -180,6 +180,7 @@ aux c2ph h2ph h2xs perlbug pl2pm pod2html pod2man splain xsubpp
 
     perlhist		Perl history records
     perldelta		Perl changes since previous version
+    perl5254delta	Perl changes in version 5.25.4
     perl5253delta	Perl changes in version 5.25.3
     perl5252delta	Perl changes in version 5.25.2
     perl5251delta	Perl changes in version 5.25.1
