--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,43 +2,116 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.25.4
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.25.5
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.25.3 release and the 5.25.4
+This document describes differences between the 5.25.4 release and the 5.25.5
 release.
 
-If you are upgrading from an earlier release such as 5.25.2, first read
-L<perl5253delta>, which describes differences between 5.25.2 and 5.25.3.
+If you are upgrading from an earlier release such as 5.25.3, first read
+L<perl5254delta>, which describes differences between 5.25.3 and 5.25.4.
 
-=head1 Performance Enhancements
+=head1 Notice
 
-=over 4
+XXX Any important notices here
 
-=item *
+=head1 Core Enhancements
 
-The rather slow implementation for the experimental subroutine signatures
-feature has been made much faster; it is now comparable in speed with the
-old-style C<my ($a, $b, @c) = @_>.
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
+
+[ List each enhancement as a =head2 entry ]
+
+=head1 Security
+
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
+
+[ List each security issue as a =head2 entry ]
+
+=head1 Incompatible Changes
+
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if inapplicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
 
 =back
 
-=head1 Documentation
+[ List each other deprecation as a =head2 entry ]
 
-=head2 Changes to Existing Documentation
+=head1 Performance Enhancements
 
-=head3 L<perlcall>
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as a =item entry ]
 
 =over 4
 
 =item *
 
-Removed redundant C<dSP> from an example.
+XXX
 
 =back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+[ Within each section, list entries as a =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -46,358 +119,266 @@ Removed redundant C<dSP> from an example.
 
 =item *
 
-L<Archive::Tar> has been upgraded from version 2.08 to 2.10.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<arybase> has been upgraded from version 0.11 to 0.12.
+XXX
+
+=back
+
+=head1 Documentation
+
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
+=head2 New Documentation
+
+XXX Changes which create B<new> files in F<pod/> go here.
+
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
+
+=head2 Changes to Existing Documentation
+
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
+=head3 L<XXX>
+
+=over 4
 
 =item *
 
-L<B> has been upgraded from version 1.62 to 1.63.
+XXX Description of the change here
+
+=back
+
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
+
+=over 4
 
 =item *
 
-L<B::Concise> has been upgraded from version 0.996 to 0.998.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
 
 =item *
 
-L<B::Deparse> has been upgraded from version 1.37 to 1.38.
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
 
 =item *
 
-L<base> has been upgraded from version 2.23 to 2.24.
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
 
 =item *
 
-L<bignum> has been upgraded from version 0.43 to 0.43_01.
-
-=item *
-
-L<Carp> has been upgraded from version 1.41 to 1.42.
-
-=item *
-
-L<Config::Perl::V> has been upgraded from version 0.26 to 0.27.
-
-=item *
-
-L<CPAN> has been upgraded from version 2.14 to 2.14_01.
-
-=item *
-
-L<CPAN::Meta> has been upgraded from version 2.150005 to 2.150010.
-
-=item *
-
-L<Digest> has been upgraded from version 1.17 to 1.17_01.
-
-=item *
-
-L<Digest::SHA> has been upgraded from version 5.95 to 5.96.
-
-=item *
-
-L<Encode> has been upgraded from version 2.84 to 2.86.
-
-=item *
-
-L<encoding> has been upgraded from version 2.17_01 to 2.18.
-
-=item *
-
-L<Errno> has been upgraded from version 1.25 to 1.26.
-
-=item *
-
-L<ExtUtils::MakeMaker> has been upgraded from version 7.18 to 7.24.
-
-=item *
-
-L<File::Fetch> has been upgraded from version 0.48 to 0.52.
-
-=item *
-
-L<File::Spec> has been upgraded from version 3.64 to 3.65.
-
-=item *
-
-L<Hash::Util> has been upgraded from version 0.20 to 0.21.
-
-=item *
-
-L<HTTP::Tiny> has been upgraded from version 0.058 to 0.064.
-
-=item *
-
-L<I18N::LangTags> has been upgraded from version 0.40 to 0.41.
-
-=item *
-
-L<IO> has been upgraded from version 1.36 to 1.37.
-
-=item *
-
-L<IO-Compress> has been upgraded from version 2.069 to 2.069_01.
-
-=item *
-
-L<IO::Socket::IP> has been upgraded from version 0.37 to 0.38.
-
-=item *
-
-L<IPC::Cmd> has been upgraded from version 0.94 to 0.96.
-
-=item *
-
-L<JSON::PP> has been upgraded from version 2.27400 to 2.27400_01.
-
-=item *
-
-L<Locale::Maketext> has been upgraded from version 1.27 to 1.28.
-
-=item *
-
-L<Locale::Maketext::Simple> has been upgraded from version 0.21 to 0.21_01.
-
-=item *
-
-L<Memoize> has been upgraded from version 1.03 to 1.03_01.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20160720 to 5.20160820.
-
-=item *
-
-L<Module::Load::Conditional> has been upgraded from version 0.64 to 0.68.
-
-=item *
-
-L<Module::Metadata> has been upgraded from version 1.000032 to 1.000033.
-
-=item *
-
-L<Net::Ping> has been upgraded from version 2.43 to 2.44.
-
-=item *
-
-L<NEXT> has been upgraded from version 0.65 to 0.67.
-
-=item *
-
-L<Opcode> has been upgraded from version 1.35 to 1.37.
-
-=item *
-
-L<Pod::Html> has been upgraded from version 1.22 to 1.2201.
-
-=item *
-
-L<Pod::Perldoc> has been upgraded from version 3.25_02 to 3.27.
-
-=item *
-
-L<POSIX> has been upgraded from version 1.70 to 1.71.
-
-=item *
-
-L<Storable> has been upgraded from version 2.56 to 2.57.
-
-=item *
-
-L<Sys::Syslog> has been upgraded from version 0.34 to 0.34_01.
-
-=item *
-
-L<Test> has been upgraded from version 1.28 to 1.29.
-
-=item *
-
-L<Test::Harness> has been upgraded from version 3.36 to 3.36_01.
-
-=item *
-
-L<Test::Simple> has been upgraded from version 1.302045 to 1.302052.
-
-=item *
-
-L<Tie::Hash::NamedCapture> has been upgraded from version 0.09 to 0.10.
-
-=item *
-
-L<Time::Local> has been upgraded from version 1.2300 to 1.24.
+XXX
 
 =back
 
 =head1 Configuration and Compilation
 
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as a =item entry ].
+
 =over 4
 
 =item *
 
-A probe for C<gai_strerror> was added to F<Configure> that checks if the
-the gai_strerror() routine is available and can be used to
-translate error codes returned by getaddrinfo() into human
-readable strings.
+XXX
+
+=back
+
+=head1 Testing
+
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+[ List each test improvement as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Platform Support
 
-=head2 Platform-Specific Notes
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as a =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
 
 =over 4
 
-=item Hurd
+=item XXX-some-platform
 
-The hints for Hurd have been improved enabling malloc wrap and reporting the
-GNU libc used (previously it was an empty string when reported).
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Platform-Specific Notes
+
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
 
 =back
 
 =head1 Internal Changes
 
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as a =item entry ]
+
 =over 4
 
 =item *
 
-Three new ops, C<OP_ARGELEM>, C<OP_ARGDEFELEM> and C<OP_ARGCHECK> have
-been added. These are intended principally to implement the individual
-elements of a subroutine signature, plus any overall checking required.
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as a =item entry ]
+
 =over 4
 
 =item *
 
-Problems with in-place array sorts: code like C<@a = sort { ... } @a>,
-where the source and destination of the sort are the same plain array, are
-optimised to do less copying around. Two side-effects of this optimisation
-were that the contents of C<@a> as visible to to sort routine were
-partially sorted, and under some circumstances accessing C<@a> during the
-sort could crash the interpreter. Both these issues have been fixed, and
-Sort functions see the original value of C<@a>.
-
-=item *
-
-Non-ASCII string delimiters are now reported correctly in error messages
-for unterminated strings.  [perl #128701]
-
-=item *
-
-C<pack("p", ...)> used to emit its warning ("Attempt to pack pointer to
-temporary value") erroneously in some cases, but has been fixed.
-
-=item *
-
-C<@DB::args> is now exempt from "used once" warnings.  The warnings only
-occurred under B<-w>, because F<warnings.pm> itself uses C<@DB::args>
-multiple times.
-
-=item *
-
-The use of built-in arrays or hash slices in a double-quoted string no
-longer issues a warning ("Possible unintended interpolation...") if the
-variable has not been mentioned before.  This affected code like
-C<qq|@DB::args|> and C<qq|@SIG{'CHLD', 'HUP'}|>.  (The special variables
-C<@-> and C<@+> were already exempt from the warning.)
-
-=item *
-
-C<gethostent> and similar functions now perform a null check internally, to
-avoid crashing with torsocks.  This was a regression from 5.22.  [perl
-#128740]
-
-=item *
-
-C<defined *{'!'}>, C<defined *{'['}>, and C<defined *{'-'}> no longer leak
-memory if the typeglob in question has never been accessed before.
-
-=item *
-
-In 5.25.4 fchown() was changed not to accept negative one as an argument
-because in some platforms that is an error.  However, in some other platforms
-that is an acceptable argument.  This change has been reverted [perl #128967].
-
-=item *
-
-Mentioning the same constant twice in a row (which is a syntax error) no
-longer fails an assertion under debugging builds.  This was a regression
-from 5.20.  [perl #126482]
-
-=item *
-
-Many issues relating to C<printf "%a"> of hexadecimal floating point
-were fixed.  In addition, the "subnormals" (formerly known as "denormals")
-floating point anumbers are now supported both with the plain IEEE 754
-floating point numbers (64-bit or 128-bit) and the x86 80-bit
-"extended precision".  Note that subnormal hexadecimal floating
-point literals will give a warning about "exponent underflow".
-[perl #128843, #128889, #128890, #128893, #128909, #128919]
-
-=item *
-
-A regression in 5.24 with C<tr/\N{U+...}/foo/> when the code point was between
-128 and 255 has been fixed. [perl #128734].
-
-=item *
-
-A regression from the previous development release, 5.23.3, where
-compiling a regular expression could crash the interpreter has been
-fixed. [perl #128686].
-
-=item *
-
-Use of a string delimiter whose code point is above 2**31 now works
-correctly on platforms that allow this.  Previously, certain characters,
-due to truncation, would be confused with other delimiter characters
-with special meaning (such as C<?> in C<m?...?>), resulting
-in inconsistent behaviour.  Note that this is non-portable,
-and is based on Perl's extension to UTF-8, and is probably not
-displayable nor enterable by any editor. [perl #128738]
-
-=item *
-
-C<@{x> followed by a newline where C<x> represents a control or non-ASCII
-character no longer produces a garbled syntax error message or a crash.
-[perl #128951]
+XXX
 
 =back
 
+=head1 Known Problems
+
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as a =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Errata From Previous Releases
+
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor has died, we've added a short obituary
+here.
+
 =head1 Acknowledgements
 
-Perl 5.25.4 represents approximately 4 weeks of development since Perl 5.25.3
-and contains approximately 18,000 lines of changes across 820 files from 23
-authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 9,200 lines of changes to 660 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its third decade thanks to a vibrant community
-of users and developers. The following people are known to have contributed the
-improvements that became Perl 5.25.4:
-
-Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan
-Collins, Daniel Dragan, David Mitchell, Father Chrysostomos, H.Merijn Brand,
-James E Keenan, Jarkko Hietaniemi, Karen Etheridge, Karl Williamson, Lukas Mai,
-Neil Bowers, Nicolas R., Pino Toscano, Rafael Garcia-Suarez, Richard Levitte,
-Shlomi Fish, Smylers, Steve Hay, Tony Cook, Yves Orton.
-
-The list above is almost certainly incomplete as it is automatically generated
-from version control history. In particular, it does not include the names of
-the (very much appreciated) contributors who reported issues to the Perl bug
-tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core. We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please see
-the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.25.4..HEAD
 
 =head1 Reporting Bugs
 
