restore Internals::hv_clear_placeholders for now

--- a/lib/Internals.pod
+++ b/lib/Internals.pod
@@ -6,6 +6,7 @@ Internals - Reserved special namespace for internals related functions
 
     $is_ro= Internals::SvREADONLY($x)
     $refcnt= Internals::SvREFCNT($x)
+    hv_clear_placeholders(%hash);
 
 =head1 DESCRIPTION
 
@@ -55,6 +56,12 @@ to implement higher-level behavior which should be used instead.
 See the core implementation for the exact meaning of the readonly flag for
 each internal variable type.
 
+=item hv_clear_placeholders(%hash)
+
+Clear any placeholders from a locked hash. Should not be used directly.
+You should use the wrapper functions providewd by Hash::Util instead.
+As of 5.25 also available as C< Hash::Util::_clear_placeholders(%hash) >
+
 =back
 
 =head1 AUTHOR
@@ -64,6 +71,8 @@ Perl core development team.
 =head1 SEE ALSO
 
 L<perlguts>
+L<Hash::Util>
+L<constant>
 universal.c
 
 =cut
