Revert "perlinterp: Use 'e.g' not 'i.e.' for 'for example'"
This reverts commit ce66b506fa280c2ede0b0d4a3e81b53d0e31cb48.

I misread the text.  This is an exhaustive list, so "i.e." is proper.

--- a/pod/perlinterp.pod
+++ b/pod/perlinterp.pod
@@ -655,7 +655,7 @@ And here is the function from F<op.c>:
     18     return o;
     19 }
 
-One particularly interesting aspect is that if the op has no kids (e.g.,
+One particularly interesting aspect is that if the op has no kids (i.e.,
 C<readline()> or C<< <> >>) the op is freed and replaced with an entirely
 new one that references C<*ARGV> (lines 12-16).
 
