--- a/AUTHORS
+++ b/AUTHORS
@@ -1174,6 +1174,7 @@ Ted Law				<tedlaw@cibcwg.com>
 Tels				<nospam-abuse@bloodgate.com>
 Teun Burgers			<burgers@ecn.nl>
 Thad Floryan			<thad@thadlabs.com>
+Theo Buehler			<theo@math.ethz.ch>
 Thomas Bowditch			<bowditch@inmet.com>
 Thomas Conté			<tom@fr.uu.net>
 Thomas Dorner			<Thomas.Dorner@start.de>
