Correct 'map' documentation to reflect operation on a list.
Rather than on an array.

For: RT #126169.

Dave Cross is now a Perl Author.

(cherry picked from commit 7c280bee056f2462f4b4aa2150a160fb9176601e)

--- a/AUTHORS
+++ b/AUTHORS
@@ -298,6 +298,7 @@ Darrell Kindred			<dkindred+@cmu.edu>
 Darrell Schiebel		<drs@nrao.edu>
 Darren/Torin/Who Ever...	<torin@daft.com>
 Dave Bianchi
+Dave Cross			<dave@mag-sol.com>
 Dave Hartnoll			<Dave_Hartnoll@3b2.com>
 Dave Liney			<dave.liney@gbr.conoco.com>
 Dave Nelson			<David.Nelson@bellcow.com>
