--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -121,6 +121,10 @@ XXX
 
 L<XXX> has been upgraded from version A.xx to B.yy.
 
+=item *
+
+L<SelectSaver> has been upgraded from version 1.02 to 1.03.
+
 =back
 
 =head2 Removed Modules and Pragmata
