Remove wrapper script "preload".
Committer: Add Hanno Böck to AUTHORS.

For RT #126599

--- a/AUTHORS
+++ b/AUTHORS
@@ -476,6 +476,7 @@ H.Merijn Brand			<h.m.brand@xs4all.nl>
 Hal Morris			<hom00@utsglobal.com>
 Hal Pomeranz			<pomeranz@netcom.com>
 Hallvard B Furuseth		<h.b.furuseth@usit.uio.no>
+Hanno Böck			<hanno@hboeck.de>
 Hannu Napari			<Hannu.Napari@hut.fi>
 Hans de Graaff			<J.J.deGraaff@twi.tudelft.nl>
 Hans Dieter Pearcey		<hdp@pobox.com>
