--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -152,13 +152,14 @@ XXX Changes which significantly change existing files in F<pod/> go here.
 However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
 section.
 
-=head3 L<XXX>
+=head3 L<perlinterp>
 
 =over 4
 
 =item *
 
-XXX Description of the change here
+L<perlinterp> has been expanded to give a more detailed example of how to
+hunt around in the parser to how a given operator is handled.
 
 =back
 
