--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -372,6 +372,12 @@ AUTOLOAD for non-method") if there was a stub present in the package into
 which the invocant had been blessed.  The warning is no longer emitted in
 such circumstances.  [perl #47047]
 
+=item *
+
+A sub containing with a "forward" declaration with the same name (e.g.,
+C<sub c { sub c; }>) could sometimes crash or loop infinitely.  [perl
+#129090]
+
 =back
 
 =head1 Known Problems
